--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #ignore all files in any directory named build
-build/
+*/build/
 
 #ignore all node_modules in any directory 
-node_modules/
+*/node_modules/
